fix: Container overflow set to scroll

--- a/src/App.css
+++ b/src/App.css
@@ -47,8 +47,8 @@
   height: max-content;
   min-height: 100%;
   gap: 1em;
-  overflow: scroll;
-  scroll-snap-type: mandatory y;
+  overflow: auto;
+  scrollbar-gutter: stable;
 }
 
 @media only screen and (max-width: 62em) {
