--- a/src/components/commons/Inputs/Select/Select.css
+++ b/src/components/commons/Inputs/Select/Select.css
@@ -46,7 +46,8 @@
   top: 100%;
   left: 0;
   right: 0;
-  overflow-y: scroll;
+  overflow-y: auto;
+  scrollbar-gutter: stable;
   max-height: 20em;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-top: none;
